# gomkl

./: .clang-format  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  cblas.go  cblas_test.go  go.mod
bazel/: intel_mkl.BUILD  mkl_repo.bzl
gen-mkl-rs/: cc.tmpl  func_list_input.go  get_or_panic.go  go.mod  go.sum  main.go  rs.tmpl
mkl-test/: BUILD.bazel  main.cc
